# MatrixMult

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  assemblyDiffCode.cpp  benchmarkMult  blockMultAsmDiff.sh  cacheBlocks.h  cmake_install.cmake  compile_benchmarks.sh  compile_diff_code.sh  defaultImpl.h  diffCode.cpp  drepper.h  godbolting.md  multBenchmark.cpp  multDiffAsm.sh  multDiffPerf.sh  multDiffValgrind.sh  util.h  vectorized.h  withTranspose.h
data/: cachegrind_with_loops.out  cachegrind_with_loops_annotated.txt  cachegrind_without_loops.out  cachegrind_without_loops_annotated.txt  diff.out  diff.s  diff_annotated.txt  perf_cacheBlocks.txt  perf_defaultImpl.txt  perf_vectorized.txt  perf_with_loops.txt  perf_without_loops.txt  withLoops.s  withLoopsGodbolt.s  withoutLoops.s  withoutLoopsGodbolt.s
